--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,8 @@ body {
 }
 
 
-input[type="textarea"]:focus{   
+input[type="textarea"]:focus,
+input[type="name"]:focus{
     border-color: hsla(14,88%,70%,0.8);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px hsla(14,88%,70%,0.8);
     outline: 0 none;
@@ -88,4 +89,9 @@ input[type="textarea"]:focus{
 .btn-primary.disabled.focus, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled].focus, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:hover {
 background: #d35129;
 border-color: #f37149;
+}
+
+input#inputName {
+    margin-top: 2em;
+    margin-bottom: 3em;
 }
